CSS fix (text-align > align-content)

--- a/theme/input/scss/_global.scss
+++ b/theme/input/scss/_global.scss
@@ -77,5 +77,5 @@ img::-moz-selection {
 }
 
 .align_center {
-  align-content: center;
+  text-align: center;
 }
